examples/errors/binding-multiple.sem
system Syntax => Syntax

rule MultiBind
<a> => <c>
<b> => <c>
----------------
<a "&" b> => <c>

